manifests/openshift/predictions/skillhub/templates/deployment-config-os.yaml
##---
# Source: skillhub/templates/deployment-config-os.yaml


apiVersion: v1
kind: DeploymentConfig

metadata:
    name: predictions
    labels:
        app: skillhub
        run: predictions

spec:
    replicas: 1
    selector:
        run: predictions
    template:
        metadata:
            labels:
                run: predictions
        spec:
            containers:
            - name: predictions
              image: docker-registry.default.svc:5000/skillhub/predictions:latest
              imagePullPolicy: Always
              ports:
              - containerPort: 5000

    triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
          automatic: true
          containerNames:
          - predictions
          from:
              kind: ImageStreamTag
              name: "predictions:latest"
