manifests/openshift/predictions/skillhub/templates/service-os.yaml
##---
# Source: skillhub/templates/service-os.yaml


apiVersion: v1
kind: Service

metadata:
    name: predictions
    labels:
        app: skillhub
        run: predictions

spec:
    type: NodePort
    selector:
        run: predictions
    ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
